# ha-incendiscat

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  pyproject.toml  release-please-config.json  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  validate.yml
blueprints/automation/: bomberscat_fire_notification.yaml
custom_components/bomberscat/: __init__.py  arcgis.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  geo.py  geo_location.py  icons.py  manifest.json  models.py  pla_alfa.py  quality_scale.yaml  sensor.py  strings.json
custom_components/bomberscat/translations/: ca.json  es.json
custom_components/incendiscat/: config_flow.py  const.py  coordinator.py  manifest.json  quality_scale.yaml  strings.json
custom_components/incendiscat/translations/: ca.json  en.json  es.json
docs/: 01-data-sources.md  02-existing-integrations.md  03-feature-spec.md  04-architecture.md  05-implementation-plan.md  06-quality-scale.md
tests/: __init__.py  conftest.py  test_arcgis.py  test_binary_sensor.py  test_blueprint.py  test_config_flow.py  test_coordinator.py  test_events.py  test_geo.py  test_init.py  test_lifecycle.py  test_models.py  test_pla_alfa.py  test_risk_entities.py  test_sensor.py  test_translations.py
tests/fixtures/: featureserver_duplicates.json  featureserver_empty.json  featureserver_page1.json  featureserver_page2.json  featureserver_sample.json
